Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8062

recovery-small test_115b: @@@@@@ FAIL: dd success

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.10.1, Lustre 2.11.0
    • Lustre 2.8.0, Lustre 2.9.0, Lustre 2.10.0
    • None
    • 3
    • 9223372036854775807

      == recovery-small test 115b: write: late REQ MDunlink and no bulk == 21:12:09 (1461384729)
      Filesystem 1K-blocks Used Available Use% Mounted on
      onyx-38vm7@tcp:/lustre
      74157152 309236 69890576 1% /mnt/lustre
      fail_loc=0x8000051b
      fail_val=4
      Filesystem 1K-blocks Used Available Use% Mounted on
      onyx-38vm7@tcp:/lustre
      74157152 309236 69890576 1% /mnt/lustre
      CMD: onyx-38vm8 lctl set_param fail_val=0 fail_loc=0x80000215
      fail_val=0
      fail_loc=0x80000215
      1+0 records in
      1+0 records out
      4096 bytes (4.1 kB) copied, 2.13538 s, 1.9 kB/s
      recovery-small test_115b: @@@@@@ FAIL: dd success
      Trace dump:
      = /usr/lib64/lustre/tests/test-framework.sh:4764:error()
      = /usr/lib64/lustre/tests/recovery-small.sh:2161:test_115_write()
      = /usr/lib64/lustre/tests/recovery-small.sh:2181:test_115b()
      = /usr/lib64/lustre/tests/test-framework.sh:5028:run_one()
      = /usr/lib64/lustre/tests/test-framework.sh:5067:run_one_logged()
      = /usr/lib64/lustre/tests/test-framework.sh:4914:run_test()
      = /usr/lib64/lustre/tests/recovery-small.sh:2183:main()
      Dumping lctl log to /logdir/test_logs/2016-04-22/lustre-reviews-el6_7-x86_64-review-dne-part-1-1_6_1_38438_-70130481106820-100010/recovery-small.test_115b.*.1461384732.log

            wc-triage WC Triage
            529964 Bhagyesh Dudhediya (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            16 Start watching this issue

              Created:
              Updated:
              Resolved: